--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-app = "group-teleg"       # Fly.io 앱 이름
+app = "jiwook-tele"       # Fly.io 앱 이름
 
 [experimental]
   auto_stop_machines = false  # 오토스탑 기능 끄기
