--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,23 @@
-app = "jiwook-tele-1"       # Fly.io 앱 이름
+# fly.toml app configuration file generated for jiwook-tele-1 on 2025-03-18T16:44:43Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
-[experimental]
-  auto_stop_machines = false  # 오토스탑 기능 끄기
+app = 'jiwook-tele-1'
+primary_region = 'nrt'
+
+[build]
+
+[http_service]
+  internal_port = 8080
+  force_https = true
+  auto_stop_machines = 'stop'
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ['app']
+
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
+  memory_mb = 256
